# GowerStreetShapes

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  shape_distribution_z.py
HaloShapeDistribution/: shape_distribution_z.py  shape_moments.py  shape_z.py
ShapeCorrelations/: fof_to_covo.py
UnderstandingShapes/: HaloShaper
src/HaloShapeDistribution/: ratios_moments.py  shape_distribution_z.py  shape_z.py
src/ShapeCorrelations/: correlation_function.py  fof_to_IAcorr.py  fof_to_covo.py
src/UnderstandingShapes/: HaloShaper.py
