[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GowerStreetShapes"                # The project name on PyPI (must be unique)
version = "0.1.0"                         # Matches __version__ in __init__.py
description = "Compute shapes from fof outputs (based on Gower Street Simulations)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name="Oriane Laurens, Astrophysics masters student", email="oriane.laurens@outlook.fr" }
]
requires-python = ">=3.8"
dependencies = ["numpy", "scipy","covo", "treecorr", "astropy", "pandas"]                     

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
